<resources>
    <string name="app_name">Sleewell</string>
    <string name="foreground_service_analyse_description">Foreground service which analyse the sound from you nights</string>
    <string name="foreground_service_analyse_label">Sleep Analysis</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="start">Start</string>
    <string name="time_desactivation">TIME</string>
    <string name="nav_button_home">HOME</string>
    <string name="nav_button_settings">SETTINGS</string>
    <string name="nav_button_stats">STATS</string>
    <string name="nav_button_music">MUSIC</string>
    <string name="protocol_button">Night mode</string>
    <string name="alarm_title_menu">ALARM</string>
    <string name="profile_title_menu">PROFILE</string>
    <string name="routine_title_menu">ROUTINE</string>
    <string name="stats_title_menu">STATS</string>
    <string name="back_title">Back</string>
    <string name="enter_music_title">Enter music</string>
    <string name="setting_tittle">Settings</string>
    <string name="setting_network_name">Network</string>
    <string name="setting_network_summary">Customise the network during the protocol</string>
    <string name="setting_network_return_key">network_return_pref</string>
    <string name="setting_protocol_name">Protocol</string>
    <string name="setting_protocol_summary">Customise the protocol</string>
    <string name="setting_protocol_return_key">protocol_return_pref</string>
    <string name="setting_help_name">Help</string>
    <string name="setting_help_summary">Get some assistance or signal a bug</string>
    <string name="setting_help_return_key">help_return_pref</string>
    <string name="setting_tutorial_key" translatable="false">tutorial</string>
    <string name="setting_tutorial_name">Show the on boarding</string>
    <string name="setting_help_title">Help</string>
    <string name="setting_help_signal_problem">Signal a problem or a bug</string>
    <string name="setting_help_signal_problem_key" translatable="false">signal</string>
    <string name="version_app">Version %s - %s</string>
    <string name="url_report">https://sleewell.fr/feedback_tester.php</string>
    <string name="setting_halo_name">Halo</string>
    <string name="settings_halo_key">halo</string>
    <string name="setting_halo_summary">Customise the halo during the protocol</string>
    <string name="setting_halo_return_key">halo_return_pref</string>
    <string name="setting_halo_summary_on">halo turn on during protocol</string>
    <string name="setting_halo_summary_off">halo turn off during protocol</string>
    <string name="setting_music_name">Music</string>
    <string name="settings_music_key">music</string>
    <string name="setting_music_summary_on">music turn on during protocol</string>
    <string name="setting_music_summary_off">music turn off during protocol</string>
    <string name="setting_notification_name">Notifications</string>
    <string name="setting_notification_summary">Customise the notifications</string>
    <string name="setting_notification_return_key">notification_return_pref</string>
    <string name="setting_wifi_key">wifi</string>
    <string name="setting_wifi_name">Wifi and Cellular Data</string>
    <string name="setting_wifi_summary_on">Set wifi and cellular data on during protocol</string>
    <string name="setting_wifi_summary_off">Set wifi and cellular data off during protocol</string>
    <string name="setting_bluetooth_key">bluetooth</string>
    <string name="setting_bluetooth_name">Bluetooth</string>
    <string name="setting_bluetooth_summary_on">Set bluetooth on during protocol</string>
    <string name="setting_bluetooth_summary_off">Set bluetooth off during protocol</string>
    <string name="setting_cellular_key">cellular</string>
    <string name="setting_cellular_name">Cellular Data</string>
    <string name="setting_cellular_summary_on">Cellular Data is on during protocol</string>
    <string name="setting_cellular_summary_off">Cellular Data is off during protocol</string>
    <string name="setting_dnd_key">dnd</string>
    <string name="setting_dnd_name">Do Not Disturb</string>
    <string name="setting_dnd_summary_on">Dnd is on during protocol</string>
    <string name="setting_dnd_summary_off">Dnd is off during protocol"</string>
    <string name="setting_language_name">Language</string>
    <string name="setting_language_summary">Change the language of the application</string>
    <string name="setting_language_return_key">language_return_pref</string>
    <string name="setting_english_name">English</string>
    <string name="setting_english_return_pref">english_return_pref</string>
    <string name="setting_french_name">French</string>
    <string name="setting_french_return_pref">french_return_pref</string>
    <string name="setting_routine_return_key">routine_return_pref</string>
    <string name="setting_file_network">com.sleewell.sleewell.network</string>
    <string name="setting_file_notification">com.sleewell.sleewell.notification</string>
    <string name="setting_file_help">com.sleewell.sleewell.mvp.help.HelpSignalmenActivity</string>
    <string name="setting_bluetooth_initial_state_key">bluetooth initial state</string>
    <string name="home_label">new_fragment_home</string>
    <string name="alarm_label">new_fragment_alarm</string>
    <string name="settings_label">new_fragment_settings</string>
    <string name="statistics_label">new_fragment_stat</string>
    <string name="routine_label">new_fragment_routine</string>
    <string name="forest_menu">FOREST</string>
    <string name="wind_menu">WIND</string>
    <string name="fire_menu">FIRE</string>
    <string name="water_menu">WATER</string>
    <string name="rain_menu">RAIN</string>
    <string name="menu_button">Back</string>
    <string name="main_image_title">forest</string>
    <string name="notification_analyse_channel_name">Sleewell Analyse</string>
    <string name="notification_analyse_channel_id">SleewellAnalyse</string>
    <string name="notification_analyse_channel_description">The notification are sent to the user to inform about analyse or news about their nights</string>
    <string name="analyse_foreground_notification_name">Night analyse</string>
    <string name="analyse_foreground_notification_content_text">Analyse in progress</string>
    <string name="analyse_foreground_stopping_notification_content_text">Stopping analyse…</string>
    <string name="nav_day_stat">DAY</string>
    <string name="nav_week_stat">WEEK</string>
    <string name="nav_month_stat">MONTH</string>
    <string name="nav_year_stat">YEAR</string>
    <string name="nav_next_description">Next analyse</string>
    <string name="nav_prev_description">Previous analyse</string>
    <string name="card_average_title">Statistics</string>
    <string name="cart_average_title_time_to_sleep">Sleeping</string>
    <string name="cart_average_title_time_to_wake_up">WakingUp</string>
    <string name="card_analyse_title">Analyse</string>
    <string name="stop_title">Stop</string>
    <string name="sharedPrefFile">sharedpreference</string>
    <string name="user_token_key">USER_TOKEN_SLEEWELL</string>
    <string name="profile_title">My Profile</string>
    <string name="welcom_back_title">Welcome\nBack</string>
    <string name="get_started_title">Get\nStarted</string>
    <string name="log_in_title">Log in</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="editTextHintPassword">Password</string>
    <string name="editTextHintLogin">Login</string>
    <string name="editTextHintEmail">Email</string>
    <string name="editTextHintFirstName">First Name</string>
    <string name="editTextHintLastName">Last Name</string>
    <string name="delete_account">Delete account</string>
    <string name="log_in_underline"><u>Log in</u></string>
    <string name="sign_up_underline"><u>Sign up</u></string>
    <string name="music_screen_title">Sounds to sleep to</string>
    <string name="hello_blank_fragment">New Fragment</string>
    <string-array name="music_player">
        <item>None</item>
        <item>Spotify</item>
        <item>Sleewell</item>
    </string-array>
    <string name="snooze_5_min">Snooze 5 min</string>
    <string name="stars">Stars</string>
    <string name="repeat">Repeat</string>
    <string name="add_alarm">Add alarm</string>
    <string name="m">M</string>
    <string name="t">T</string>
    <string name="w">W</string>
    <string name="th">T</string>
    <string name="f">F</string>
    <string name="s">S</string>
    <string name="su">S</string>
    <string name="alarm_ringtone">Alarm ringtone</string>
    <string name="vibrate">Vibrate</string>
    <string name="label">Label</string>
    <string name="name_of_label">Name of label</string>
    <string name="check">Check</string>
    <string name="ringtone">Ringtone</string>
    <string name="deleteall">Delete all</string>
    <string name="validate">VALIDATE</string>
    <string name="my_alarms">My Alarms</string>
    <string name="my_routines">My Routines</string>
    <string name="routine_connect">Please log in</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="dndAccessTutorialDescription1">Before you can start using the app, there is a favor we have to ask of you.
        Sleewell needs to have access to the Do not disturb mode.
         It will only use it during the routine, if you set it up as such.
    </string>
    <string name="dndAccessTutorialDescription2">By pressing the following button, you will be redirected to an android settings page
         where you will have to find Sleewell and grant access to the Do not disturb mode.
    </string>
    <string name="leewell" translatable="false">\u0020leewell</string>
    <string name="stats">STATS</string>
    <string name="routine">ROUTINE</string>
    <string name="profile">PROFILE</string>
    <string name="alarm">ALARM</string>
    <string name="welcome">Welcome!</string>
    <string name="dndAccessTutorialIntroduction">We are happy to welcome you aboard and hope that Sleewell will help with your nights!</string>
    <string name="dndAccessTutorialButton">Authorize</string>
    <string name="dndAccessTutorialDescription3">After that you can open again the app and you will be free to use it.</string>
    <string name="dndAccessTutorialThanks">Thank you for your cooperation!</string>
    <string name="dndAccessTutorialTeam">The Sleewell team</string>
    <string name="setAlarm">Set Alarm</string>
    <string name="deleteAlarmMessage">Are you sure you want to delete this alarm?</string>
    <string name="deleteAlarmTitle">Delete the alarm of</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="welcome_back">Welcome\nBack</string>
    <string name="log_in">Log in</string>
    <string name="skip">SKIP</string>
    <string name="how_did_you">How did you</string>
    <string name="sleep">Sleep ?</string>
    <string name="page_stat_text">Here are displayed your nights statistics. You can check, based on the sound you made, how was your sleep last night, week, month or year.</string>
    <string name="routine_menu">ROUTINE</string>
    <string name="profile_menu">PROFILE</string>
    <string name="alarm_menu">ALARM</string>
    <string name="stats_menu">STATS</string>
</resources>