<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="network_category"
        app:title="@string/setting_network_name"
        >
        <SwitchPreferenceCompat
            app:icon="@drawable/ic_setting"
            app:key="@string/setting_wifi_key"
            app:defaultValue="@bool/setting_wifi_default_value"
            app:summaryOff="@string/setting_wifi_summary_off"
            app:summaryOn="@string/setting_wifi_summary_on"
            app:title="@string/setting_wifi_name" />

        <SwitchPreferenceCompat
            app:icon="@drawable/ic_setting"
            app:key="@string/setting_bluetooth_key"
            app:defaultValue="@bool/setting_bluetooth_default_value"
            app:summaryOff="@string/setting_bluetooth_summary_off"
            app:summaryOn="@string/setting_bluetooth_summary_on"
            app:title="@string/setting_bluetooth_name" />

        <SwitchPreferenceCompat
            app:icon="@drawable/ic_setting"
            app:key="@string/setting_cellular_key"
            app:defaultValue="@bool/setting_cellular_default_value"
            app:summaryOff="@string/setting_cellular_summary_off"
            app:summaryOn="@string/setting_cellular_summary_on"
            app:title="@string/setting_cellular_name" />
    </PreferenceCategory>
    <PreferenceCategory
        app:key="notifications_category"
        app:title="@string/setting_notification_name">

        <SwitchPreferenceCompat
            app:key="@string/setting_dnd_key"
            app:title="@string/setting_dnd_name"
            app:summaryOff="@string/setting_dnd_summary_off"
            app:summaryOn="@string/setting_dnd_summary_on"
            app:defaultValue="@bool/setting_dnd_default_value"/>
    </PreferenceCategory>


</PreferenceScreen>