<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:title="@string/setting_network_name"
        app:summary="@string/setting_network_summary"
        app:fragment="com.sleewell.sleewell.mvp.menu.settings.view.SettingsFragment$NetworkPreferencesFragment"
        app:icon="@drawable/network_cell_24px"/>

    <Preference
        app:title="@string/setting_notification_name"
        app:summary="@string/setting_notification_summary"
        app:fragment="com.sleewell.sleewell.mvp.menu.settings.view.SettingsFragment$NotificationPreferencesFragment"
        app:icon="@drawable/notifications_24px"/>
    <Preference
        app:title="@string/setting_protocol_name"
        app:summary="@string/setting_protocol_summary"
        app:fragment="com.sleewell.sleewell.mvp.menu.settings.view.SettingsFragment$ProtocolPreferencesFragment"
        app:icon="@drawable/ic_halo"
        />

</androidx.preference.PreferenceScreen>