<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ToggleButton
        android:id="@+id/tD"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:textOff="@string/m"
        android:textOn="@string/m"
        style="@style/toggleButton"
        android:background="@drawable/toggle_bg" />

    <ToggleButton
        android:id="@+id/tL"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:textOff="@string/t"
        android:textOn="@string/t"
        style="@style/toggleButton"
        android:background="@drawable/toggle_bg" />

    <ToggleButton
        android:id="@+id/tM"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:textOff="@string/w"
        android:textOn="@string/w"
        style="@style/toggleButton"
        android:background="@drawable/toggle_bg" />

    <ToggleButton
        android:id="@+id/tMi"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:textOff="@string/t"
        android:textOn="@string/t"
        style="@style/toggleButton"
        android:background="@drawable/toggle_bg" />

    <ToggleButton
        android:id="@+id/tJ"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:textOff="@string/f"
        android:textOn="@string/f"
        style="@style/toggleButton"
        android:background="@drawable/toggle_bg" />

    <ToggleButton
        android:id="@+id/tV"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:textOff="@string/s"
        android:textOn="@string/s"
        style="@style/toggleButton"
        android:background="@drawable/toggle_bg" />

    <ToggleButton
        android:id="@+id/tS"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:textOff="@string/s"
        android:textOn="@string/s"
        style="@style/toggleButton"
        android:background="@drawable/toggle_bg" />
</LinearLayout>