<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginTop="48dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ToggleButton
            android:id="@+id/home_nav"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:background="@drawable/nav_button_style"
            android:clickable="false"
            android:checked="false"
            android:focusable="false"
            android:fontFamily="@font/nunito_bold"
            android:textAlignment="center"
            android:textColor="@color/button_text_color"
            android:textOff="@string/nav_button_home"
            android:textOn="@string/nav_button_home"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/alarm_nav"
            app:layout_constraintTop_toTopOf="parent" />

        <ToggleButton
            android:id="@+id/alarm_nav"
            android:layout_width="65dp"
            android:layout_height="match_parent"
            android:background="@drawable/nav_button_style"
            android:clickable="false"
            android:checked="false"
            android:focusable="false"
            android:fontFamily="@font/nunito_bold"
            android:textAlignment="center"
            android:textColor="@color/button_text_color"
            android:textOff="@string/alarm_menu"
            android:textOn="@string/alarm_menu"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/home_nav"
            app:layout_constraintEnd_toStartOf="@id/profile_nav"
            app:layout_constraintTop_toTopOf="parent" />

        <ToggleButton
            android:id="@+id/profile_nav"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:background="@drawable/nav_button_style"
            android:clickable="false"
            android:checked="false"
            android:focusable="false"
            android:fontFamily="@font/nunito_bold"
            android:textAlignment="center"
            android:textColor="@color/button_text_color"
            android:textOff="@string/profile_menu"
            android:textOn="@string/profile_menu"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/alarm_nav"
            app:layout_constraintEnd_toStartOf="@id/routine_nav"
            app:layout_constraintTop_toTopOf="parent" />

        <ToggleButton
            android:id="@+id/routine_nav"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:background="@drawable/nav_button_style"
            android:clickable="false"
            android:checked="false"
            android:focusable="false"
            android:fontFamily="@font/nunito_bold"
            android:textAlignment="center"
            android:textColor="@color/button_text_color"
            android:textOff="@string/routine_menu"
            android:textOn="@string/routine_menu"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/profile_nav"
            app:layout_constraintEnd_toStartOf="@id/stats_nav"
            app:layout_constraintTop_toTopOf="parent" />

        <ToggleButton
            android:id="@+id/stats_nav"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="15dp"
            android:background="@drawable/nav_button_style"
            android:checked="true"
            android:clickable="false"
            android:focusable="false"
            android:fontFamily="@font/nunito_bold"
            android:textAlignment="center"
            android:textColor="@color/button_text_color"
            android:textOff="@string/stats_menu"
            android:textOn="@string/stats_menu"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/routine_nav"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="45dp"
        android:src="@drawable/ic_undraw_analytics_re_dkf8"
        app:layout_constraintBottom_toTopOf="@id/subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/nunito_light"
        android:includeFontPadding="false"
        android:letterSpacing="-0.01"
        android:text="@string/how_did_you"
        android:textColor="@color/colorPrimary"
        android:textSize="41sp"
        app:layout_constraintBottom_toTopOf="@+id/skipButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:fontFamily="@font/nunito_bold"
        android:includeFontPadding="false"
        android:letterSpacing="-0.01"
        android:text="@string/sleep"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="56sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitle"/>

    <TextView
        android:layout_width="0dp"
        android:layout_marginEnd="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nunito"
        android:letterSpacing="-0.01"
        android:lineSpacingExtra="4sp"
        android:text="@string/page_stat_text"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"/>

    <Button
        android:id="@+id/skipButton"
        style="@style/outlinedButton"
        android:layout_width="140dp"
        android:layout_height="55dp"
        android:layout_marginStart="45dp"
        android:layout_marginBottom="65dp"
        android:insetBottom="0dp"
        android:insetTop="0dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/skip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>