<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".modules.permissions.DndAccessTutorialActivity">

    <ImageView
        android:id="@+id/stars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/full_stars" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="@font/nunito_light"
        android:textColor="@color/colorAccent"
        android:text="@string/welcome"
        android:textSize="64sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textIntro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/dndAccessTutorialIntroduction"
        android:justificationMode="inter_word"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <ImageView
        android:id="@+id/iconSplashScreen"
        android:layout_width="170dp"
        android:layout_height="200dp"
        android:background="@color/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textIntro"
        app:srcCompat="@drawable/avd_squirel"
        app:tint="@color/colorAccent" />

    <TextView
        android:id="@+id/textTutorial1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="@font/nunito"
        android:text="@string/dndAccessTutorialDescription1"
        android:textSize="16sp"
        android:justificationMode="inter_word"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iconSplashScreen" />

    <TextView
        android:id="@+id/textTutorial2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="25dp"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="@font/nunito_bold"
        android:justificationMode="inter_word"
        android:text="@string/dndAccessTutorialDescription2"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTutorial1" />

    <Button
        android:id="@+id/buttonProceed"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Authorize"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="12sp"
        android:backgroundTint="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@+id/textTutorial2"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="30dp" />

    <TextView
        android:id="@+id/textTutorial3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="@font/nunito"
        android:text="@string/dndAccessTutorialDescription3"
        android:textSize="16sp"
        android:justificationMode="inter_word"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTutorial2" />

    <TextView
        android:id="@+id/textTutorial4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/dndAccessTutorialThanks"
        android:textSize="16sp"
        android:justificationMode="inter_word"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTutorial3" />

    <TextView
        android:id="@+id/textSignature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/dndAccessTutorialTeam"
        android:textSize="16sp"
        android:justificationMode="inter_word"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTutorial4" />


    <Button
        android:id="@+id/buttonProceed"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dndAccessTutorialButton"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/textSignature"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="30dp"
        app:strokeColor="@color/colorPrimary" />

</androidx.constraintlayout.widget.ConstraintLayout>